--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
   <div class="row">
   <div class="col-md-12">
     <div class="uber">
-      <img src="/src/img/car.png" alt="" class="car_img">
+      <img src="img/car.png" alt="" class="car_img">
     </div>
   </div>
     <div class="descr">Машины на каждый день.<br>
